Fixed: Issue with wrong margin on frontpage mobile version

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1933,7 +1933,7 @@ Keyframes for frontpage
       }
     }
     #donationForm {
-      margin: 20px;
+      margin: 30px;
       padding: 30px;
 
       h2 {
